k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: larakube
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
