k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: larakube
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: ghcr.io/lara-kube/php:8.4
          ports:
          - containerPort: 9000
          volumeMounts:
            - mountPath: /var/www/html
              name: app-code
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              cpu: "250m"
              memory: "256Mi"

        - name: nginx
          image: ghcr.io/lara-kube/nginx-app:latest
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - "nc -z 127.0.0.1 9000"
            initialDelaySeconds: 5
            periodSeconds: 2
            failureThreshold: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: app-code
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 30
            periodSeconds: 10

      volumes:
        - name: app-files
          persistentVolumeClaim:
            claimName: larakube-pvc
        - name: app-code
          hostPath:
            path: /Users/franciscobarrento/Codex/SideProjects/LaraKube/larakube
