k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: larakube
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
