k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
spec:
  tls:
    - hosts:
        - your-app-domain.com
      secretName: laravel-tls
  ingressClassName: nginx
  rules:
    - host: lara-kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-nginx
                port:
                  number: 80
